--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button class="btn btn--hold">Hold</button>
       <button class="btn btn--rules">Rules</button>
       <div id="gameRules" class="btn gameRules" style="display: none;">
-        Each player can <b>ROLL</b> a dice multiple times.<br>
+        Each player can <b>ROLL</b> the dice multiple times.<br>
         If the player rolls a 1 the score that is gained gets lost.<br>
         By choosing <b>HOLD</b> the player can accmulate points as long as the dice is anything but a 1.<br>
         Whoever reaches first to the set <b>SCORE</b> wins the game.
